<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.traffic01.ui.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/nav_etc"
            android:name="com.example.traffic01.ui.EtcFragment"
            android:label="@string/menu_etc"
            tools:layout="@layout/fragment_etc"/>

    <fragment
            android:id="@+id/nav_traffic_light"
            android:name="com.example.traffic01.ui.TrafficLightFragment"
            android:label="@string/menu_traffic_light"
            tools:layout="@layout/fragment_traffic_light"/>
    <fragment
            android:id="@+id/nav_violation"
            android:name="com.example.traffic01.ui.ViolationFragment"
            android:label="@string/menu_data"
            tools:layout="@layout/violation_fragment"/>
</navigation>