<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/login"
        android:padding="24dp"
        tools:context=".activity.LoginActivity">
    <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"/>
    <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/login_pass"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:id="@+id/check_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_check1"
                android:gravity="center"
                android:layout_weight="1"/>
        <CheckBox
                android:id="@+id/check_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_check2"
                android:gravity="center"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button1"
                android:layout_weight="1"
                android:layout_margin="12dp"/>
        <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button2"
                android:layout_weight="1"
                android:layout_margin="12dp"/>
    </LinearLayout>
</LinearLayout>