<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.TrafficLightFragment"
        android:background="@color/pink">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <ImageView
                android:id="@+id/imageLight"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:src="@drawable/traffic_light"
                android:layout_margin="24dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@id/cardView1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    android:padding="1dp"/>
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/rv_first"
                    app:layout_constraintStart_toStartOf="@id/rv_first"
                    app:layout_constraintEnd_toEndOf="@id/rv_first"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_margin="24dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toBottomOf="@id/cardView2"
            app:layout_constraintStart_toStartOf="@id/cardView2"
            app:layout_constraintEnd_toEndOf="@id/cardView2">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
            <RadioGroup
                    android:id="@+id/radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="24dp"
                    android:layout_weight="1">
                <RadioButton
                        android:id="@+id/road_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_road_asc"
                        android:checked="true"/>
                <RadioButton
                        android:id="@+id/red_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_red_asc"/>
                <RadioButton
                        android:id="@+id/yellow_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_yellow_asc"/>
                <RadioButton
                        android:id="@+id/green_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_green_asc"/>
            </RadioGroup>
            <RadioGroup
                    android:id="@+id/radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="24dp"
                    android:layout_weight="1">
                <RadioButton
                        android:id="@+id/road_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_road_desc"/>
                <RadioButton
                        android:id="@+id/red_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_red_desc"/>
                <RadioButton
                        android:id="@+id/yellow_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_yellow_desc"/>
                <RadioButton
                        android:id="@+id/green_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_green_desc"/>

            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
