<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pink"
        tools:context=".ui.EtcFragment">
    <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:layout_margin="24dp"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="0dp">
        <TextView
                android:id="@+id/top_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_recharge"
                android:textSize="16sp"
                android:layout_marginVertical="24dp"
                android:layout_marginStart="12dp"
                android:layout_gravity="start|center"/>
        <Button
                android:id="@+id/show_more"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/more"
                android:textSize="12sp"
                android:layout_marginHorizontal="16dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/cardView1"
            app:layout_constraintStart_toStartOf="@id/cardView1"
            app:layout_constraintEnd_toEndOf="@id/cardView1"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_etc"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:textSize="24sp"/>
            <View android:layout_width="match_parent"
                  android:layout_height="2sp"
                  android:background="@color/purple_700"
                  android:layout_margin="16dp"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="账户余额："
                          android:textSize="24sp"
                          android:gravity="end"/>
                <TextView android:id="@+id/balance"
                          android:layout_width="100dp"
                          android:layout_height="wrap_content"
                          android:textColor="@color/grey"
                          android:text="1,000元"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:layout_margin="12dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="        车号："
                          android:textSize="24sp"
                          android:gravity="end"/>
                <Spinner android:id="@+id/spinner_car_number"
                         android:layout_width="120dp"
                         android:layout_height="36dp"
                         android:background="@drawable/ic__spinner_bord"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:gravity="center"
                          android:layout_margin="12dp">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="充值金额："
                          android:textSize="24sp"
                          android:gravity="end"/>
                <Spinner android:id="@+id/spinner_add_money"
                         android:layout_width="120dp"
                         android:layout_height="36dp"
                         android:background="@drawable/ic__spinner_bord"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp">
                <Button
                        android:id="@+id/buttonRecharge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="充值"
                        android:layout_marginHorizontal="12dp"/>
                <Button
                        android:id="@+id/buttonSelect"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="查询"
                        android:layout_marginHorizontal="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>